--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,27 @@
 buildscript {
-	ext {
-		springBootVersion = '2.1.2.RELEASE'
-	}
 	repositories {
 		mavenCentral()
 	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+}
+
+plugins {
+  id "com.moowork.node" version "1.2.0"
+  id "org.springframework.boot" version "2.1.0.RELEASE"
 }
 
 configurations {
-	developmentOnly
-	runtimeClasspath {
-		extendsFrom developmentOnly
-	}
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'java'
 
 group = 'com.omni'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = 1.10
 
 repositories {
 	mavenCentral()
@@ -33,8 +31,36 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.session:spring-session-core'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	developmentOnly("org.springframework.boot:spring-boot-devtools")
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
+
+node {
+  version = '8.11.3'
+  npmVersion = '5.6.0'
+  download = true
+}
+
+bootJar {
+  archiveName = "website.jar"
+}
+
+processResources {
+  with copySpec {
+      from "${buildDir}/fe"
+      include "**/*.html"
+      into "templates"
+  }
+
+  with copySpec {
+    from "${buildDir}/fe"
+    include "**/*.js", "**/*.css"
+    into "static"
+  }
+}
+
+task webpack(type: NodeTask, dependsOn: 'npmInstall') {
+	script = project.file('node_modules/.bin/webpack')
+}
+
+processResources.dependsOn 'webpack'
