--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ buildscript {
 	repositories {
 		mavenCentral()
 	}
+
+    dependencies {
+        classpath "com.moowork.gradle:gradle-node-plugin:1.1.1"
+    }
 }
 
 plugins {
@@ -48,6 +52,8 @@ node {
   version = '8.11.3'
   npmVersion = '5.6.0'
   download = true
+  workDir = file("${project.buildDir}/node")
+  nodeModulesDir = file("${project.projectDir}")
 }
 
 bootJar {
