--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
 	repositories {
 		mavenCentral()
+        jcenter()
 	}
 
     dependencies {
-        classpath "com.moowork.gradle:gradle-node-plugin:1.1.1"
+        classpath "com.moowork.gradle:gradle-node-plugin:1.2.0"
     }
 }
 
@@ -52,12 +53,12 @@ node {
   version = '8.11.3'
   npmVersion = '5.6.0'
   download = true
-  workDir = file("${project.buildDir}/node")
+  workDir = file("${project.buildDir}")
   nodeModulesDir = file("${project.projectDir}")
 }
 
 bootJar {
-  archiveName = "website.jar"
+    mainClassName = 'com.omni.omni.OmniApplication'
 }
 
 processResources {
@@ -75,7 +76,14 @@ processResources {
 }
 
 task webpack(type: NodeTask, dependsOn: 'npmInstall') {
-	script = project.file('node_modules/.bin/webpack')
+    def osName = System.getProperty("os.name").toLowerCase();
+    if (osName.contains("windows")) {
+        script = project.file('node_modules/webpack/bin/webpack.js')
+    } else {
+        script = project.file('node_modules/.bin/webpack')
+    }
 }
 
 processResources.dependsOn 'webpack'
+
+clean.delete << file('${buildDir}/build/fe')
