--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.jsoup:jsoup:1.11.3'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.7'
+    implementation 'com.google.guava:guava:27.0.1-jre'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
@@ -59,6 +61,10 @@ node {
 
 bootJar {
     mainClassName = 'com.omni.omni.OmniApplication'
+}
+
+bootRun {
+    jvmArgs=["-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=0.0.0.0:5005"]
 }
 
 processResources {
